# chat-system

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.c  server.c
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.c  client.h  client_network.c  client_ui.c
src/common/: CMakeLists.txt
src/common/include/: database.h  message.h  protocol.h  utils.h
src/common/src/: database.c  message.c  protocol.c  utils.c
src/server/: CMakeLists.txt  server.c  server.h  server_auth.c  server_client.c  server_room.c
